k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
template:
  metadata:
    labels:
     app: sample-app
  spec:
    containers:
    - name: app
      image: REPLACE_WITH_ECR_IMAGE
      ports:
      - containerPort: 8000
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
